# CDSAgent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_STATUS.md  MILESTONE-0.1.0-SETUP.md  README.md  justfile  upgrade-report.txt
.artifacts/: WORKLOG-HANDBOOK.md
.artifacts/0.1.0-init/: IMPORT_LINEAR_DATA.md  LINEAR_SYNC_COMPLETE.md  MILESTONE-0.1.0-SETUP.md  SETUP_LINEAR_WORKSPACE.md  git-commit-summary.md
.artifacts/DEV-COOKING-CONSTITUTION/: NEXT_TASK_CHECKLIST.md  SESSION_INITIALIZATION_WORKFLOW.md  WORKLOG-HANDBOOK.md  WORKTREE_WORKFLOW.md  WORK_SESSION_CHECKPOINT_WORKFLOW.md
.artifacts/spec-tasks-T-02-01-graph-builder/: git-refs.txt  metadata.yaml
.artifacts/spec-tasks-T-02-02-sparse-index/: AGENTS.md  CLAUDE.md  CRITICAL_ISSUE_OVERFITTING.md  FEASIBILITY-LLM-RERANKING.md  Research_250309089_Paper_and_LocAgent_demo.txt  THREAD-22-GAP-ANALYSIS.md  WORKLOG-HANDBOOK.md  git-refs.txt  metadata.yaml
.artifacts/spec-tasks-T-05-01-jsonrpc-schema/: git-refs.txt  metadata.yaml
.artifacts/spec-tasks-T-05-02-typescript-bindings/: git-refs.txt  metadata.yaml
.artifacts/spec-tasks-T-05-03-error-catalogue/: git-refs.txt  metadata.yaml
.artifacts/spec-tasks-T-06-01-parity-methodology/: git-refs.txt  metadata.yaml
.artifacts/spec-tasks-templates/: README.md  metadata.template.yaml
.cargo/: config.toml
.claude/: settings.local.json
.claude/agents/: ast-graph-index-ranker.md  code-analyzer.md  code-retriever.md  document-retriever.md
.claude/hooks/: Cargo.toml  inject-datetime.sh  markdown-formatter.sh  pre-tool-use-approval.sh  run-hook.sh  user-prompt-submit.sh
.claude/hooks/rs/hook-support/: Cargo.toml
.claude/hooks/rs/hook-support/src/: lib.rs
.claude/hooks/rs/inject-datetime/: Cargo.toml
.claude/hooks/rs/inject-datetime/src/: main.rs
.claude/hooks/rs/markdown-formatter/: Cargo.toml
.claude/hooks/rs/markdown-formatter/src/: main.rs
.claude/hooks/rs/pre-tool-use-approval/: Cargo.toml
.claude/hooks/rs/pre-tool-use-approval/src/: main.rs
.claude/hooks/rs/user-prompt-submit/: Cargo.toml
.claude/hooks/rs/user-prompt-submit/src/: main.rs
.cursor/rules/: derived-cursor-rules.mdc
.dev/: README.md
.dev/templates/: README.md  metadata.template.yaml
.dev/tools/: RFC-DEV-TOOLS.md
.dev/workflows/: ARCHITECTURE_PRINCIPLES.md  NEXT_TASK_CHECKLIST.md  SESSION_INITIALIZATION_WORKFLOW.md  WORKLOG-HANDBOOK.md  WORKTREE_WORKFLOW.md  WORK_SESSION_CHECKPOINT_WORKFLOW.md
cds-agent/: .env.example  README.md  package.json  tsconfig.json
cds-agent/src/: index.ts  main.ts
cds-agent/tests/: jsonrpc-client.test.ts
crates/cds-index/: Cargo.toml
crates/cds-index/benches/: graph_bench.rs  search_bench.rs
crates/cds-index/src/: config.rs  lib.rs
crates/cds-index/src/graph/: GraphBuilder-Refactoring-Plan.txt  builder.rs  builder_backup.rs  mod.rs  parser.rs  traversal.rs
crates/cds-index/src/graph/builder/: aliases.rs  behaviors.rs  imports.rs  language.rs  mod.rs  state.rs
crates/cds-index/src/graph/builder/python/: ast_utils.rs  call_extractor.rs  import_resolver.rs  mod.rs
crates/cds-index/src/index/: bm25.rs  mod.rs  name_index.rs  sparse_index.rs  stop_words.rs  tokenizer.rs
crates/cds-index/src/index/sparse_index/: classifier.rs  llm_reranker.rs
crates/cds-index/src/persistence/: mod.rs
crates/cds-index/src/service/: handlers.rs  mod.rs  server.rs
crates/cds-index/tests/: graph_builder_tests.rs  graph_export_tests.rs  graph_parity_tests.rs  index_tests.rs  integration_test.rs  search_parity_tests.rs  service_contract_tests.rs  smoke_multi_repo.rs  smoke_overlap.rs  tokenizer_fixture_tests.rs
crates/cds-index/tests/support/: mod.rs  parity_loader.rs
crates/cds-tools/: Cargo.toml
crates/cds-tools/src/: main.rs
crates/cds-tools/src/commands/: mod.rs
docs/: NEXT_TASK_CHECKLIST.md  RFC-DEV-TOOLS.md  WORKTREE_WORKFLOW.md  WORK_SESSION_CHECKPOINT_WORKFLOW.md  parity-validation-methodology.md
docs/api/: README.md  error-codes.md  jsonrpc-schema.json  versioning.md
docs/checkpoint/: 01-overview.md  02-phases-overview.md  03-phase1-review.md  04-phase2-verification.md  05-phase3-update.md  06-phase4-git.md  07-phase5-final.md  (+4 more)
scripts/: README.md  analyze_diagnostics.py  benchmark-performance.py  checkpoint-helper.sh  compare_graphs.py  create-daily-worklog.sh  create-task-worklog.sh  debug_node_ids.py  export_graph_to_locagent.py  export_stop_words.py  extract-parity-baseline.py  extract-search-baseline.py  extract-traverse-baseline.py  fetch-swe-bench-lite.py  gen_locagent_bm25_fixture.py  json_to_pickle.py  llm_reranker.sh  parity-check.sh  select-swe-bench-instances.py  swe-lite  test_graph_export.py  test_reranker_batch.sh  test_reranker_input.json
(+291 files in other folders)
