[workspace]
resolver = "2"
members = [
    "crates/cds-index",
    "crates/cds-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CDSAgent Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lwyBZss8924d/CDSAgent"

[workspace.dependencies]
# Shared dependencies across all crates
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP/Networking
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.18"
colored = "3.0"

# Search/Indexing
tantivy = "0.25"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
rustpython-parser = "0.4"

# Data structures
petgraph = "0.8"
dashmap = "6.1"

# Serialization
bincode = "2.0"

# Testing
proptest = "1.8"
criterion = "0.7"

# Text processing
unicode-normalization = "0.1"
once_cell = "1.19"
rust-stemmers = "1.2"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
