[workspace]
members = [
    "rs/hook-support",
    "rs/pre-tool-use-approval",
    "rs/user-prompt-submit",
    "rs/inject-datetime",
    "rs/markdown-formatter",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[workspace.package]
authors = ["CDSAgent AI Engineer Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
