[package]
name = "user-prompt-submit"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
hook-support = { path = "../hook-support" }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
